--- a/API/database/config.ini
+++ b/API/database/config.ini
@@ -8,7 +8,7 @@ HOST_SERVER = smtp.exmail.qq.com
 # 邮件发件人
 FROM = chenxiaohuan@linghit.com
 # 邮件收件人
-TO =["sunyi@linghit.com;","chenxiaohuan@linghit.com;"]
+TO =["857227598@qq.com;","chenxiaohuan@linghit.com;"]
 #TO=chenxiaohuan@linghit.com
 # 发送邮箱用户名/密码
 user = chenxiaohuan@linghit.com
