更新邮件代码

--- a/API/database/config.ini
+++ b/API/database/config.ini
@@ -5,10 +5,11 @@ name = 归乐
 [user]
 # 发送邮箱服务器
 HOST_SERVER = smtp.exmail.qq.com
+#HOST_SERVER = ssl://smtp.exmail.qq.com
 # 邮件发件人
 FROM = chenxiaohuan@linghit.com
 # 邮件收件人
-TO =["857227598@qq.com;","chenxiaohuan@linghit.com;"]
+TO =["857227598@qq.com","chenxiaohuan@linghit.com;"]
 #TO=chenxiaohuan@linghit.com
 # 发送邮箱用户名/密码
 user = chenxiaohuan@linghit.com
